src/parser/snapshots/nox__parser__tests__binary_ops__boolean.snap
---
source: src/parser/tests.rs
expression: chunk.code
---
[
    PushTrue,
    Not,
    PushFalse,
    And,
    PushFalse,
    PushTrue,
    Equal,
    Or,
    PushTrue,
    Xor,
    PushTrue,
    Not,
    Or,
    Return,
    PushNil,
    Return,
]
