src/parser/snapshots/nox__parser__tests__binary_ops__left_associativity.snap
---
source: src/parser/tests.rs
expression: chunk.code
---
[
    ReadConstant(0),
    ReadConstant(1),
    Add,
    ReadConstant(2),
    Add,
    ReadConstant(3),
    Subtract,
    ReadConstant(4),
    Subtract,
    Return,
    PushNil,
    Return,
]
