src/parser/snapshots/nox__parser__tests__binary_ops__simple_arithmetics.snap
---
source: src/parser/tests.rs
expression: chunk.code
---
[
    ReadConstant(0),
    ReadConstant(1),
    ReadConstant(2),
    Multiply,
    Add,
    ReadConstant(3),
    Add,
    Return,
    PushNil,
    Return,
]
